# aihl

./: .env  .gitignore  .replit  README.md  backend_init.sh  index.html  package-lock.json  package.json  vite.config.js.timestamp-1727990089030-c71a8adc280a6.mjs
backend/: .env.example  README.md  backend_init.sh  judgement.sh  pyproject.toml  requirements.txt  supabase-test.py  test.db
backend copy/: Dockerfile  README.md  judgement.sh  pyproject.toml  requirements.txt
backend copy/.github/: dependabot.yml
backend copy/.github/workflows/: dependabot-auto-merge.yml
backend copy/app/api/: api.py
backend copy/app/api/endpoints/: auth.py  judge.py  teams.py
backend copy/app/core/: config.py  security.py
backend copy/app/db/: base_class.py  session.py
backend copy/app/models/: challenge.py
backend copy/app/schemas/: challenge.py  team.py
backend copy/app/services/: ai_judge_service.py  github_service.py
backend copy/finetune/: readme.md
backend/.github/: dependabot.yml
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/endpoints/: __init__.py  achievements.py  (+12 more)
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/models/: team.py  user.py
backend/app/schemas/: __init__.py  achievement.py  ai_generated_challenge.py  challenge.py  chat.py  enrollment.py  replay.py  repo.py  skill_profile.py  team.py  user.py  wallet.py
backend/app/services/: ai_judge_service.py  config.py  model_config.py  supabase_service.py
backend/db/: supabase.sql
backend/finetune/: readme.md
backend/tests/: conftest.py
(+143 files in other folders)
